# lid-awake

./: .gitignore  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
assets/icons/: README.md
scripts/: build_icons.py
src/: App.svelte  App.test.ts  index.css  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sleep.rs
src/test/: setup.ts
