[package]
name = "lid-awake"
version = "0.1.0"
description = "A compact macOS menu bar switch for pmset disablesleep"
edition = "2021"

[lib]
name = "lid_awake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
